--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,18 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the README at:
+// https://github.com/microsoft/vscode-dev-containers/tree/v0.158.0/containers/python-3
 {
-  // A name to show for the workspace folder.
-  "name": "kipack",
-
-  // Image used for the container
+  "name": "Kipack",
   "build": {
     "dockerfile": "Dockerfile",
     "context": ".."
   },
+
   // Set *default* container specific settings.json values on container create.
   "settings": {
     "terminal.integrated.shell.linux": "/usr/bin/zsh",
-    "python.pythonPath": "/usr/local/bin/python",
+    "python.pythonPath": "/usr/local/bin/python3.8",
+    "python.linting.enabled": true,
+    "python.linting.pylintEnabled": true,
     "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
     "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
     "python.sortImports.path": "/usr/local/py-utils/bin/isort"
@@ -25,32 +27,23 @@
   ],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [8890],
+  // "forwardPorts": [],
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "pip install --user -e .",
+  "postCreateCommand": "pip3 install --user =e .",
 
-  // Use 'postStartCommand' to run commands after the container is started.
-  "postStartCommand": "jupyter lab ./examples/notebooks --no-browser --ip=127.0.0.1 --port=8890 &> /dev/null &",
-
-  // Uncomment when using a ptrace-based debugger like C++, Go, and Rust
-  "runArgs": [
-    "--name",
-    "kipack",
-    // Uncomment this to enable Nvidia support
-    "--gpus",
-    "all"
-  ],
-
-  // Uncomment to connect as a non-root user. See https://aka.ms/vscode-remote/containers/non-root.
+  // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "vscode",
 
-  // Bind mount working directory
+  // Runtime args.
+  "runArgs": ["--name", "Kipack", "--gpus", "all"],
+
+  // Bind working directory.
   "workspaceMount": "source=/home/zheng/repositories/kipack,target=/home/vscode/kipack,type=bind,consistency=cached",
 
   // Default working directory
   "workspaceFolder": "/home/vscode/kipack",
 
-  // Keep container running after disconnect
+  // Keep container running after disconnect.
   "shutdownAction": "none"
 }
