--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -10,27 +10,22 @@
   // Set *default* container specific settings.json values on container create.
   "settings": {
     "terminal.integrated.shell.linux": "/usr/bin/zsh",
-    "python.pythonPath": "/usr/local/bin/python3.8",
-    "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
     "python.formatting.blackPath": "/usr/local/py-utils/bin/black",
     "python.linting.flake8Path": "/usr/local/py-utils/bin/flake8",
     "python.sortImports.path": "/usr/local/py-utils/bin/isort"
   },
 
   // Add the IDs of extensions you want installed when the container is created.
-  "extensions": [
-    "ms-python.python",
-    "ms-python.vscode-pylance",
-    "eamodio.gitlens",
-    "esbenp.prettier-vscode"
-  ],
+  "extensions": ["ms-python.python", "ms-python.vscode-pylance"],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  // "forwardPorts": [],
+  "forwardPorts": [8890],
 
   // Use 'postCreateCommand' to run commands after the container is created.
-  "postCreateCommand": "pip3 install --user =e .",
+  "postCreateCommand": "pip install --user -e .",
+
+  // Use 'postStartCommand' to run commands after the container is started.
+  "postStartCommand": "jupyter lab ./examples/notebooks --no-browser --ip=127.0.0.1 --port=8890 &> /dev/null &",
 
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "vscode",
