--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
   "remoteUser": "vscode",
 
   // Runtime args.
-  "runArgs": ["--name", "Kipack", "--gpus", "all"],
+  "runArgs": ["--name", "kipack", "--gpus", "all"],
 
   // Bind working directory.
   "workspaceMount": "source=/home/zheng/repositories/kipack,target=/home/vscode/kipack,type=bind,consistency=cached",
