Update devcontainer setup.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,13 +20,13 @@
   "extensions": ["ms-python.python", "ms-python.vscode-pylance"],
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  "forwardPorts": [8890],
+  // "forwardPorts": [8890],
 
   // Use 'postCreateCommand' to run commands after the container is created.
   "postCreateCommand": "pip install --user -e .",
 
   // Use 'postStartCommand' to run commands after the container is started.
-  "postStartCommand": "jupyter lab ./examples/notebooks --no-browser --port=8890",
+  // "postStartCommand": "jupyter lab ./examples/notebooks --no-browser --port=8890",
 
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   "remoteUser": "vscode",
