Add flake8 and isort configuration files.

--- a/environment.yml
+++ b/environment.yml
@@ -1,13 +1,13 @@
-name: kipack
 channels:
   - conda-forge
   - defaults
 dependencies:
   - numpy
   - scipy
-  - matplotlib
   - pyfftw
   - cupy
+  - matplotlib
+  - jupyterlab
   - pip
   - pip:
       - params-mz @ git+https://github.com/Mayuyu/params.git
