--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,23 +9,24 @@ ARG UPGRADE_PACKAGES="true"
 ARG USERNAME=none
 ARG USER_UID=0
 ARG USER_GID=$USER_UID
+COPY .devcontainer/library-scripts/common-debian.sh /tmp/library-scripts/
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && bash /tmp/library-scripts/common-debian.sh "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" "true" "true" \
+    && apt-get clean -y && rm -rf /var/lib/apt/lists/* /tmp/library-scripts
 
-# Download script and run it with the option above
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive  \
-    && apt-get -y install --no-install-recommends curl ca-certificates \
-    && bash -c "$(curl -fsSL "https://raw.githubusercontent.com/microsoft/vscode-dev-containers/master/script-library/common-debian.sh")" -- "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" "true" "true" \
-    && apt-get autoremove -y && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+# [Optional] Uncomment to install a different version of Python than the default
+# RUN conda install -y python=3.6
 
 # Setup default python tools in a venv via pipx to avoid conflicts
 ENV PIPX_HOME=/usr/local/py-utils \
     PIPX_BIN_DIR=/usr/local/py-utils/bin
 ENV PATH=${PATH}:${PIPX_BIN_DIR}
-# Download script and run it with the option above
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive  \
-    && apt-get -y install --no-install-recommends curl ca-certificates \
-    && bash -c "$(curl -fsSL "https://raw.githubusercontent.com/microsoft/vscode-dev-containers/master/script-library/python-debian.sh")" -- "none" "/opt/conda" "${PIPX_HOME}" "${USERNAME}" "false" \
-    && apt-get clean -y && rm -rf /var/lib/apt/lists/*
+COPY .devcontainer/library-scripts/python-debian.sh /tmp/library-scripts/
+RUN bash /tmp/library-scripts/python-debian.sh "none" "/opt/conda" "${PIPX_HOME}" "${USERNAME}" "false" \ 
+    && apt-get clean -y && rm -rf /tmp/library-scripts
 
-COPY environment.yml* .devcontainer/noop.txt /tmp/conda-tmp/
+# Copy environment.yml (if found) to a temp locaition so we update the environment. Also
+# copy "noop.txt" so the COPY instruction does not fail if no environment.yml exists.
+COPY environment.yml /tmp/conda-tmp/
 RUN if [ -f "/tmp/conda-tmp/environment.yml" ]; then /opt/conda/bin/conda env update -n base -f /tmp/conda-tmp/environment.yml; fi \
     && rm -rf /tmp/conda-tmp
