--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,7 @@
   "postCreateCommand": "pip3 install --no-cache-dir -r .devcontainer/dev-requirements.txt",
 
   // Use 'postStartCommand' to run commands after the container is started.
-  // "postStartCommand": "jupyter lab ./examples/notebooks --no-browser --port=8890",
+  "postStartCommand": "nohup bash -c 'jupyter lab --ip=0.0.0.0 --port=8889 --allow-root &'",
 
   // Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
   // "remoteUser": "vscode",
