--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,9 @@
+[build-system]
+requires = ["setuptools>=40.9.0", "wheel"]
+build_backend = "setuptools.build_meta"
+
 [tool.black]
-line-length = 79
+line-length = 80
 
 [tool.isort]
 profile = "black"
