build: use pyproject and add .flake8

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,46 @@
 [build-system]
-requires = ["setuptools>=40.9.0", "wheel"]
-build_backend = "setuptools.build_meta"
+requires = ["setuptools>=61.0.0", "wheel"]
+build-backend = "setuptools.build_meta"
 
-[tool.black]
-line-length = 79
+[project]
+name = "kipack"
+version = "1.0.0"
+description = "A python solver for kinetic equations based on JAX"
+readme = "README.md"
+requires-python = ">=3.10"
+authors = [{ email = "mazhengcn@outlook.com" }, { name = "Zheng Ma" }]
+license = { text = "Apache License, Version 2.0" }
+classifiers = [
+    "License :: OSI Approved :: Apache Software License",
+    "Operating System :: POSIX :: Linux",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Topic :: Scientific/Engineering :: Mathematics",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+]
+dependencies = [
+    "absl-py",
+    "jax>=0.4.5",
+    "ml-collections",
+    "numpy",
+    "pyfftw",
+    "scipy"
+]
+
+[project.urls]
+homepage = "https://github.com/mazhengcn/kipack"
+
+[tool.setuptools.packages.find]
+where = ["src"]
 
 [tool.isort]
 profile = "black"
+
+[tool.flake8]
+extend-ignore = ["E203"]
+
+[tool.black]
+line-length = 79
+target-version = ["py310, py311"]
