--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,16 +1,11 @@
 {
+    "name": "KiPack Dev Container",
     "build": {
         "dockerfile": "./docker/Dockerfile"
     },
     // 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
     "features": {
-        "ghcr.io/devcontainers/features/common-utils:2": {
-            "installZsh": true,
-            "installOhMyZsh": true,
-            "configureZshAsDefaultShell": true,
-            "upgradePackages": true,
-            "username": "none"
-        },
+        "ghcr.io/devcontainers/features/git:1": {},
         "ghcr.io/mazhengcn/devcontainer-features/starship:1": {}
     },
     // 👇 Configure tool-specific properties.
@@ -20,19 +15,23 @@
                 "python.defaultInterpreterPath": "/opt/kipackenv/bin/python"
             },
             "extensions": [
-                "ms-python.python",
-                "ms-python.pylance",
-                "ms-python.flake8",
-                "ms-python.black-formatter",
-                "ms-python.isort",
+                "aaron-bond.better-comments",
                 "bungcip.better-toml",
-                "aaron-bond.better-comments"
+                "GitHub.copilot",
+                "ms-python.black-formatter",
+                "ms-python.flake8",
+                "ms-python.isort",
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "ms-toolsai.jupyter",
+                "yzhang.markdown-all-in-one"
             ]
         }
     },
     "runArgs": [
+        "--name=kipack",
         "--gpus=all",
-        "--shm-size=1gb",
+        "--shm-size=1gb"
     ],
     "mounts": [
         {
@@ -41,5 +40,5 @@
             "type": "volume"
         }
     ],
-    "postCreateCommand": "python -m pip install -e ."
+    "postCreateCommand": "python -m pip install -e '.[dev]'"
 }
