--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -1,7 +1,7 @@
 {
     "name": "KiPack Dev Container",
     "build": {
-        "dockerfile": "./docker/Dockerfile"
+        "dockerfile": "Dockerfile"
     },
     // 👇 Features to add to the Dev Container. More info: https://containers.dev/implementors/features.
     "features": {
