--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,23 +1,15 @@
-# JAX and Python
-ARG JAX_VERSION=0.4.8
-ARG PYTHON_VERSION=3.11
-ARG VENV_PATH=/opt/kipackenv
-ARG CUDA_MAJOR_VERSION=12
-
-FROM python:${PYTHON_VERSION}-slim-bullseye AS pip-installs
-ARG JAX_VERSION
-ARG VENV_PATH
-ARG CUDA_MAJOR_VERSION
-
+FROM python:3.11-slim-bullseye AS pip-installs
 RUN apt-get update && apt-get -y install libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
-RUN python -m venv ${VENV_PATH}
-ENV PATH=${VENV_PATH}/bin:$PATH
-RUN pip install --no-cache-dir --upgrade pip \
-    && pip install --no-cache-dir -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html \
+RUN python -m venv /opt/kipackenv
+ENV PATH="/opt/kipackenv/bin:$PATH"
+
+RUN pip install --no-cache-dir --upgrade pip wheel \
+    && pip install --no-cache-dir \
+    -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html \
     absl-py \
-    jax[cuda${CUDA_MAJOR_VERSION}_pip]==${JAX_VERSION} \
+    jax[cuda12_pip] \
     ml-collections \
     numpy \
     pyfftw \
@@ -25,15 +17,13 @@ RUN pip install --no-cache-dir --upgrade pip \
     nvidia-curand-cu12 \
     nvidia-cuda-nvrtc-cu12
 
-FROM python:${PYTHON_VERSION}-slim-bullseye
-ARG VENV_PATH
-ARG NVIDIA_LIB_DIR=${VENV_PATH}/lib/python3.11/site-packages/nvidia
-
-# Python packages
-COPY --from=pip-installs ${VENV_PATH} ${VENV_PATH}
+FROM python:3.11-slim-bullseye
+COPY --from=pip-installs /opt/kipackenv /opt/kipackenv
 COPY --from=pip-installs /usr/lib/x86_64-linux-gnu/libgomp.so.1 /usr/lib/x86_64-linux-gnu/libgomp.so.1
 
-ENV PATH=${VENV_PATH}/bin:$PATH
+ENV PATH="/opt/kipackenv/bin:$PATH"
+
+ARG NVIDIA_LIB_DIR=${VENV_PATH}/lib/python3.11/site-packages/nvidia
 ENV LD_LIBRARY_PATH=${NVIDIA_LIB_DIR}/cuda_runtime/lib
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${NVIDIA_LIB_DIR}/cuda_nvrtc/lib
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${NVIDIA_LIB_DIR}/cublas/lib
@@ -41,3 +31,4 @@ ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${NVIDIA_LIB_DIR}/cufft/lib
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${NVIDIA_LIB_DIR}/curand/lib
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${NVIDIA_LIB_DIR}/cusolver/lib
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${NVIDIA_LIB_DIR}/cusparse/lib
+ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${NVIDIA_LIB_DIR}/cudnn/lib
